mudei os . para # (arrumei as ids que eu achei)

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,3 +7,12 @@ div#cardsJogos{
 	width: 25%;
 	height: 32%;
 }
+#fundo{
+	 background-image: url(../img/carrossel/muffins.jpg);
+}
+/*
+#margem{
+	margin-top: -40%;
+}
+
+#
