--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,16 +7,30 @@ div#cardsJogos{
 	width: 25%;
 	height: 32%;
 }
-#fundo{
-<<<<<<< HEAD
-	 background-image: url(../img/fundo.jpg);
-=======
-	 background-image: url(../img/carrossel/muffins.jpg);
->>>>>>> c1769f2d0cd3b9f6b994a3dc19fd2bf9b5191416
+
+
+/*AQUI MUDA A IMAGEM DE FUNDO*/
+body{
+
+	background-image:url(../img/carrossel/muffins.jpg);
+	background-position: center center;
+	background-attachment: fixed;
+	background-size: 100%;
 }
+
 /*
+
+#fundoo{
+
+	background-image:url(../img/carrossel/muffins.jpg);
+	width: 60%;
+
+}
+
+
 #margem{
 	margin-top: -40%;
 }
 
 #
+*/
