--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -11,10 +11,10 @@ div#cardsJogos{
 
 /*AQUI MUDA A IMAGEM DE FUNDO*/
 body{
-	background-image:url(../fundo.jpg);
+	background-image:url(../img/fundo.jpg);
 	background-position: center center;
 	background-attachment: scroll;
-	background-size: 100% 90%;
+	background-size: 100% 100%;
 	background-repeat: no-repeat;
 }
 
