Mudei varias coisinhas
tirei a tag <style> de algumas páginas e fiz o css, acreditem, isso foi bem trabalhoso

--- a/assets/css/cabecalho.css
+++ b/assets/css/cabecalho.css
@@ -1,6 +1,9 @@
+div#menu{
+/*Não funcionou - queria deixar a borda quadrada*/
+}
+
 div#menu a:hover{
     background-color: active;
-
 }
 
 div#login{
