--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,9 +1,9 @@
-body{
-	background-image:url(../img/login.jpg);
+.fundo{
+	background-image:url(../img/fundo/login.jpg);
 	background-size: 100% 100%;
 	background-position: center center;
 	background-repeat: no-repeat;
-	background-attachment: fixed;
+	background-attachment: scroll;
 }
 
 h2#login{
