--- a/assets/css/buscar_restaurante.css
+++ b/assets/css/buscar_restaurante.css
@@ -14,5 +14,7 @@ body#boddy{
 	background-attachment: scroll;
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
+	
+	background-clip: border-box;
 
 }
