--- a/assets/css/rodape.css
+++ b/assets/css/rodape.css
@@ -1,6 +1,23 @@
 #pe{
-	margin-top: 2.25%;
-	position:absolute;
-	bottom: 0;
+	margin-top: 7%;
+	
+	margin-bottom: 0%;
     width:100%;
+
+
+}
+
+
+
+.wrapper{
+	
+	margin-bottom: -10%;
+
+
+}
+
+.footer,
+.push{
+	height: 10%;
+
 }
